--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,6 +7,8 @@ driver:
 provisioner:
   name: chef_solo
   environments_path: environments
+  data_bags_path: "test/integration/data_bags"
+  encrypted_data_bag_secret_key_path: "encrypted_data_bag_secret"
 
 platforms:
   - name: centos-6
@@ -22,8 +24,6 @@ platforms:
       box_url: http://vagrant.osuosl.org/ubuntu-12.04-20140121.box
     run_list:
       - recipe[apt::default]
-
-
 
 suites:
   - name: default
@@ -46,4 +46,5 @@ suites:
         environment: vagrant
     run_list:
       - recipe[ganeti_webmgr::mysql]
+      - recipe[ganeti_webmgr::bootstrap_user]
       - recipe[ganeti_webmgr::apache]
