Add attribute to kitchen.yml and remove unnecessary !!

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -39,6 +39,8 @@ suites:
         database:
           engine: django.db.backends.sqlite3
           name: /home/vagrant/gwm.db
+        vncauthproxy:
+          port: "8888"
 
   - name: mysql
     provisioner:
