Add Haystack whoosh path and auto indexing

--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -33,6 +33,7 @@ suites:
       - recipe[ganeti_webmgr::default]
       - recipe[ganeti_webmgr::bootstrap_user]
       - recipe[ganeti_webmgr::apache]
+      - recipe[ganeti_webmgr::haystack]
     attributes:
       ganeti_webmgr:
         database:
@@ -49,3 +50,4 @@ suites:
       - recipe[ganeti_webmgr::mysql]
       - recipe[ganeti_webmgr::bootstrap_user]
       - recipe[ganeti_webmgr::apache]
+      - recipe[ganeti_webmgr::haystack]
